fix: css alignment
+ add social auth functions

--- a/src/components/Buttons/RectangleButton/styles.css
+++ b/src/components/Buttons/RectangleButton/styles.css
@@ -1,5 +1,5 @@
 .buttongroup {
-    width: 25%;
+    width: 28%;
     height: 50px;
     display: flex;
     justify-content: space-around;
