--- a/src/components/Forms/RegisterForm/styles.css
+++ b/src/components/Forms/RegisterForm/styles.css
@@ -7,6 +7,7 @@
 
 .register_form{
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
